--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1451,7 +1451,7 @@ jobs:
           distribution: temurin
           java-version: "24"
           cache: maven
-          server-id: central
+          server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
