--- a/packages/java/pom.xml
+++ b/packages/java/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>dev.kreuzberg</groupId>
     <artifactId>html-to-markdown</artifactId>
-    <version>2.22.0</version>
+    <version>2.22.1</version>
     <packaging>jar</packaging>
 
     <name>html-to-markdown</name>
@@ -217,20 +217,6 @@
                 </executions>
             </plugin>
 
-            <!-- Central Publishing Plugin for Maven Central (2025+) -->
-            <plugin>
-                <groupId>org.sonatype.central</groupId>
-                <artifactId>central-publishing-maven-plugin</artifactId>
-                <version>${central-publishing-plugin.version}</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <publishingServerId>central</publishingServerId>
-                    <autoPublish>true</autoPublish>
-                    <waitUntil>published</waitUntil>
-                    <checksums>all</checksums>
-                    <deploymentName>html-to-markdown-${project.version}</deploymentName>
-                </configuration>
-            </plugin>
             <!-- Explicit resource processing plugin version to avoid Maven warnings -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -280,4 +266,35 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>publish</id>
+            <build>
+                <plugins>
+                    <!-- Skip maven-deploy-plugin when using central-publishing-maven-plugin -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-deploy-plugin</artifactId>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
+                    <!-- Sonatype Central Publishing plugin -->
+                    <plugin>
+                        <groupId>org.sonatype.central</groupId>
+                        <artifactId>central-publishing-maven-plugin</artifactId>
+                        <version>${central-publishing-plugin.version}</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <publishingServerId>ossrh</publishingServerId>
+                            <autoPublish>true</autoPublish>
+                            <waitUntil>published</waitUntil>
+                            <waitMaxTime>7200</waitMaxTime>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
