--- a/packages/ruby/ext/html-to-markdown-rb/native/Cargo.toml
+++ b/packages/ruby/ext/html-to-markdown-rb/native/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "html-to-markdown-rb"
-version ="2.22.1"
+version ="2.22.2"
 edition = "2024"
 authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
 license = "MIT"
@@ -9,7 +9,6 @@ homepage = "https://github.com/kreuzberg-dev/html-to-markdown"
 documentation = "https://docs.rs/html-to-markdown-rs"
 readme = "README.md"
 rust-version = "1.85"
-lints.workspace = true
 description = "Ruby bindings (Magnus) for html-to-markdown - high-performance HTML to Markdown converter"
 keywords = ["html", "markdown", "ruby", "magnus", "bindings"]
 categories = ["api-bindings"]
@@ -19,7 +18,7 @@ name = "html_to_markdown_rb"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-html-to-markdown-rs = { version = "2.22.1", features = ["inline-images", "visitor", "metadata"] }
+html-to-markdown-rs = { version = "=2.22.2", features = ["inline-images", "visitor", "metadata"] }
 magnus = { git = "https://github.com/matsadler/magnus", rev = "f6db11769efb517427bf7f121f9c32e18b059b38", features = ["rb-sys"] }
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
@@ -27,9 +26,22 @@ pprof = { version = "0.15", features = ["flamegraph"], optional = true }
 
 [dev-dependencies]
 pretty_assertions = "1.4"
+
 [features]
 default = ["inline-images", "metadata", "visitor"]
 inline-images = ["html-to-markdown-rs/inline-images"]
 metadata = ["html-to-markdown-rs/metadata"]
 visitor = ["html-to-markdown-rs/visitor"]
 profiling = ["dep:pprof"]
+
+[lints.rust]
+unsafe_code = "forbid"
+missing_docs = "warn"
+unused_must_use = "deny"
+
+[lints.clippy]
+all = { level = "deny", priority = -1 }
+cargo = { level = "deny", priority = -1 }
+pedantic = { level = "warn", priority = -1 }
+nursery = { level = "warn", priority = -1 }
+multiple_crate_versions = "allow"
