--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -462,7 +462,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: macos-14
+          - os: macos-latest
             target: aarch64-apple-darwin
             rust_target: ""
             use_cross: false
@@ -673,7 +673,7 @@ jobs:
           - os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
             use_cross: false
-          - os: macos-14
+          - os: macos-latest
             target: aarch64-apple-darwin
             use_cross: false
           - os: windows-latest
@@ -767,7 +767,7 @@ jobs:
         include:
           - os: ubuntu-latest
             label: linux
-          - os: macos-14
+          - os: macos-latest
             label: macos-arm64
           - os: windows-latest
             label: windows-x64
@@ -970,9 +970,7 @@ jobs:
             rid: linux-x64
           - os: windows-latest
             rid: win-x64
-          - os: macos-15-intel
-            rid: osx-x64
-          - os: macos-14
+          - os: macos-latest
             rid: osx-arm64
     runs-on: ${{ matrix.os }}
     timeout-minutes: 60
@@ -1021,9 +1019,7 @@ jobs:
             platform: linux-arm64
           - os: windows-latest
             platform: windows-x64
-          - os: macos-15-intel
-            platform: darwin-x64
-          - os: macos-14
+          - os: macos-latest
             platform: darwin-arm64
     runs-on: ${{ matrix.os }}
     steps:
@@ -1643,8 +1639,6 @@ jobs:
 
       - name: Setup Rust toolchain
         uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: x86_64-apple-darwin
 
       - name: Setup Homebrew
         run: |
