fix: Ruby gem dependency resolution and IPv6 URL parsing (v2.22.6)
- Fix Ruby gem dependency resolution with workspace inheritance + vendoring
- Add URL sanitization for malformed markdown-like URLs (fixes #186)
- Update all package versions to 2.22.6

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,12 @@ members = [
 ]
 exclude = [
     "packages/elixir/native/html_to_markdown_elixir",
-    "tests/test_apps/elixir/deps"
+    "tests/test_apps/elixir/deps",
+    "packages/ruby/vendor"
 ]
 
 [workspace.package]
-version = "2.22.5"
+version = "2.22.6"
 edition = "2024"
 authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
 license = "MIT"
@@ -30,7 +31,7 @@ readme = "README.md"
 rust-version = "1.85"
 
 [workspace.dependencies]
-html-to-markdown-rs = { version = "2.22.5", path = "crates/html-to-markdown" }
+html-to-markdown-rs = { version = "2.22.6", path = "crates/html-to-markdown" }
 
 tl = { package = "astral-tl", version = "0.7.11" }
 html5ever = "0.36"
