fix: CI failures - doctest, WASM test, and sccache warnings
- Remove doctest from internal sanitize_markdown_url function (fixes CI Rust/Node/Ruby)
- Fix WASM BR tag test expectations to match correct behavior (fixes CI WASM)
- Fix sccache PATH configuration using dirname (fixes CI Validate warnings)

--- a/.github/actions/setup-rust/action.yml
+++ b/.github/actions/setup-rust/action.yml
@@ -107,7 +107,7 @@ runs:
     - name: Ensure sccache is on PATH
       if: inputs.use-sccache == 'true' && env.SCCACHE_PATH != ''
       shell: bash
-      run: echo "${SCCACHE_PATH}" >> "$GITHUB_PATH"
+      run: echo "$(dirname "${SCCACHE_PATH}")" >> "$GITHUB_PATH"
 
     - name: Install cargo-llvm-cov if not cached
       shell: bash
